# aloha_ros2

./: README.md  package.xml  setup.cfg  setup.py
aloha_ros2/: __init__.py  constants.py  main.py  mirror_control.py  mirror_control_recv_socket.py  mirror_control_recv_socket_to_topic.py  mirror_control_send_socket.py  mirror_control_topic.py  robot_utils.py  test_socket_server.py  tf_publisher.py
config/: follower_arm_modes.yaml  leader_arm_modes.yaml
launch/: mirror_control.launch.py  mirror_control_recv.launch.py  mirror_control_send.launch.py  one_side_op.launch.py
scripts/: mirror_control.sh  mirror_control_recv_socket.sh  mirror_control_send_socket.sh  start_follower_arm.sh  start_leader_arm.sh  start_vx_left.sh  start_wx_left.sh
